项目SpringBoot版本调整、注册中心配置以及Feign远程调用测试

--- a/coupon/src/main/resources/application.yml
+++ b/coupon/src/main/resources/application.yml
@@ -6,6 +6,12 @@ spring:
     url: jdbc:mysql://8.134.216.243:3310/sms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 8.134.216.243:8848
+  application:
+    name: coupon
 
 # MapperScan
 # sql映射文件位置
