--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -6,6 +6,12 @@ spring:
     url: jdbc:mysql://8.134.216.243:3310/pms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 8.134.216.243:8848
+  application:
+    name: product
 
 # MapperScan
 # sql映射文件位置
