--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>renren-fast</module>
         <module>renren-generator</module>
         <module>common</module>
+        <module>gateway</module>
     </modules>
 
 </project>
