--- a/renren-fast/src/main/resources/application.yml
+++ b/renren-fast/src/main/resources/application.yml
@@ -40,6 +40,12 @@ spring:
     throw-exception-if-no-handler-found: true
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+  application:
+    name: admin
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 8.134.216.243:8848
 #  resources:
 #    add-mappings: false
 
