--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>renren-generator</module>
         <module>common</module>
         <module>gateway</module>
+        <module>third-party</module>
     </modules>
 
 </project>
