--- a/renren-fast/src/main/resources/bootstrap.properties
+++ b/renren-fast/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
-spring.application.name=coupon
+spring.application.name=admin
 spring.cloud.nacos.config.server-addr=8.134.216.243:8848
-spring.cloud.nacos.config.namespace=ecca42fb-2510-4eb4-bde5-c11111b92ee2
+spring.cloud.nacos.config.namespace=48f72109-1a17-4653-813a-b0ad22b8ad83
 
 spring.cloud.nacos.config.ext-config[0].data-id=database.yml
 spring.cloud.nacos.config.ext-config[0].group=DEFAULT_GROUP
