--- a/renren-generator/src/main/resources/generator.properties
+++ b/renren-generator/src/main/resources/generator.properties
@@ -3,12 +3,12 @@
 mainPath=com.study.gulimall
 
 package=com.study.gulimall
-moduleName=member
+moduleName=product
 
 author=Knight
 email=20tzzhang@stu.edu.cn
 
-tablePrefix=ums_
+tablePrefix=pms_
 
 #?????????
 tinyint=Integer
