--- a/order/src/main/resources/bootstrap.properties
+++ b/order/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
-spring.application.name=coupon
+spring.application.name=order
 spring.cloud.nacos.config.server-addr=8.134.216.243:8848
-spring.cloud.nacos.config.namespace=ecca42fb-2510-4eb4-bde5-c11111b92ee2
+spring.cloud.nacos.config.namespace=10111a63-67df-4cdc-bc76-069003b17a47
 
 spring.cloud.nacos.config.ext-config[0].data-id=database.yml
 spring.cloud.nacos.config.ext-config[0].group=DEFAULT_GROUP
