--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -51,11 +51,11 @@
 	</properties>
 
 	<dependencies>
-		<!--        服务注册/发现-->
-		<dependency>
-			<groupId>com.alibaba.cloud</groupId>
-			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>com.study.gulimall</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
