--- a/common/pom.xml
+++ b/common/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>joda-time</artifactId>
             <version>2.10.3</version>
         </dependency>
+        <!--        检验-->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
         <!--        注册中心-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
